--- a/index.html
+++ b/index.html
@@ -9,23 +9,27 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="game-container">
-      <div class="players-container">
-        <div class="player-info">
-          <div class="player-name">Player 1</div>
-          <div class="player-score">0</div>
+    <div class="container">
+      <div class="game-container">
+        <div class="players-container">
+          <div class="player-info">
+            <div class="player-name">Player 1</div>
+            <div class="player-score">Score: 0</div>
+          </div>
+          <div class="player-info">
+            <div class="player-name">Player 2</div>
+            <div class="player-score">Score: 0</div>
+          </div>
         </div>
-        <div class="player-info">
-          <div class="player-name">Player 2</div>
-          <div class="player-score">0</div>
+        <div class="game-board"></div>
+        <div class="options-button">
+          <div class="btn button-reset">
+            <button>Reset</button>
+          </div>
+          <div class="btn button-return">
+            <button>Return</button>
+          </div>
         </div>
-      </div>
-      <div class="game-board"></div>
-      <div class="btn button-reset">
-        <button>Reset</button>
-      </div>
-      <div class="btn button-return">
-        <button>Return</button>
       </div>
     </div>
   </body>
