Added button custimization

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
             <div class="player-score">Score: 0</div>
           </div>
         </div>
-        <div class="game-board"></div>
+        <div class="game-board">
+          <div class="cell cell-0"></div>
+          <div class="cell cell-1"></div>
+          <div class="cell cell-2"></div>
+          <div class="cell cell-3"></div>
+          <div class="cell cell-4"></div>
+          <div class="cell cell-5"></div>
+          <div class="cell cell-6"></div>
+          <div class="cell cell-7"></div>
+          <div class="cell cell-8"></div>
+        </div>
         <div class="options-button">
           <div class="btn button-reset">
             <button>Reset</button>
