--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Acme&family=Bebas+Neue&family=Jost&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
@@ -22,15 +29,15 @@
           </div>
         </div>
         <div class="game-board">
-          <div class="cell cell-0"></div>
-          <div class="cell cell-1"></div>
-          <div class="cell cell-2"></div>
+          <div class="cell cell-0">X</div>
+          <div class="cell cell-1">X</div>
+          <div class="cell cell-2">X</div>
           <div class="cell cell-3"></div>
           <div class="cell cell-4"></div>
           <div class="cell cell-5"></div>
-          <div class="cell cell-6"></div>
-          <div class="cell cell-7"></div>
-          <div class="cell cell-8"></div>
+          <div class="cell cell-red cell-6">O</div>
+          <div class="cell cell-red cell-7">O</div>
+          <div class="cell cell-red cell-8">O</div>
         </div>
         <div class="options-button">
           <div class="btn button-reset">
