--- a/index.html
+++ b/index.html
@@ -15,39 +15,5 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
-  <body>
-    <div class="container">
-      <div class="game-container">
-        <div class="players-container">
-          <div class="player-info">
-            <div class="player-name">Player 1</div>
-            <div class="player-score">Score: 0</div>
-          </div>
-          <div class="player-info">
-            <div class="player-name">Player 2</div>
-            <div class="player-score">Score: 0</div>
-          </div>
-        </div>
-        <div class="game-board">
-          <div class="cell cell-0">X</div>
-          <div class="cell cell-1">X</div>
-          <div class="cell cell-2">X</div>
-          <div class="cell cell-3"></div>
-          <div class="cell cell-4"></div>
-          <div class="cell cell-5"></div>
-          <div class="cell cell-red cell-6">O</div>
-          <div class="cell cell-red cell-7">O</div>
-          <div class="cell cell-red cell-8">O</div>
-        </div>
-        <div class="options-button">
-          <div class="btn button-reset">
-            <button>Reset</button>
-          </div>
-          <div class="btn button-return">
-            <button>Return</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
