--- a/index.html
+++ b/index.html
@@ -15,5 +15,24 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="title"></div>
+      <div class="player-one"></div>
+      <div class="player-two"></div>
+      <div class="game">
+        <div class="cell cell--1"></div>
+        <div class="cell cell--2"></div>
+        <div class="cell cell--3"></div>
+        <div class="cell cell--4"></div>
+        <div class="cell cell--5"></div>
+        <div class="cell cell--6"></div>
+        <div class="cell cell--7"></div>
+        <div class="cell cell--8"></div>
+        <div class="cell cell--9"></div>
+      </div>
+      <div class="reset"></div>
+      <div class="go-back"></div>
+    </div>
+  </body>
 </html>
