--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="title"></div>
-      <div class="player-one"></div>
-      <div class="player-two"></div>
+      <h1 class="title">Tic-Tac-Toe</h1>
+      <div class="players">
+        <div class="player player-one">Player One</div>
+        <div class="player player-two">Player Two</div>
+      </div>
       <div class="game">
         <div class="cell cell--1"></div>
         <div class="cell cell--2"></div>
@@ -31,8 +33,10 @@
         <div class="cell cell--8"></div>
         <div class="cell cell--9"></div>
       </div>
-      <div class="reset"></div>
-      <div class="go-back"></div>
+      <div class="btns">
+        <div class="reset">Reset</div>
+        <div class="go-back">Back to main</div>
+      </div>
     </div>
   </body>
 </html>
