--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Acme&family=Bebas+Neue&family=Jost&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&family=Secular+One&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
@@ -23,19 +29,19 @@
         <div class="player player-two">Player Two</div>
       </div>
       <div class="game">
-        <div class="cell cell--1"></div>
-        <div class="cell cell--2"></div>
-        <div class="cell cell--3"></div>
-        <div class="cell cell--4"></div>
-        <div class="cell cell--5"></div>
-        <div class="cell cell--6"></div>
-        <div class="cell cell--7"></div>
-        <div class="cell cell--8"></div>
-        <div class="cell cell--9"></div>
+        <div class="cell" data-cell="0">X</div>
+        <div class="cell" data-cell="1">X</div>
+        <div class="cell" data-cell="2">X</div>
+        <div class="cell" data-cell="3"></div>
+        <div class="cell" data-cell="4"></div>
+        <div class="cell" data-cell="5"></div>
+        <div class="cell" data-cell="6">O</div>
+        <div class="cell" data-cell="7">O</div>
+        <div class="cell" data-cell="8">O</div>
       </div>
       <div class="btns">
-        <div class="reset">Reset</div>
-        <div class="go-back">Back to main</div>
+        <button class="btn reset">Reset</button>
+        <button class="btn start-over">Start Over</button>
       </div>
     </div>
   </body>
