--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Acme&family=Bebas+Neue&family=Jost&display=swap"
@@ -17,7 +17,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&family=Secular+One&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
@@ -29,15 +29,15 @@
         <div class="player player-two">Player Two</div>
       </div>
       <div class="game">
-        <div class="cell" data-cell="0">X</div>
-        <div class="cell" data-cell="1">X</div>
-        <div class="cell" data-cell="2">X</div>
+        <div class="cell" data-cell="0"></div>
+        <div class="cell" data-cell="1"></div>
+        <div class="cell" data-cell="2"></div>
         <div class="cell" data-cell="3"></div>
         <div class="cell" data-cell="4"></div>
         <div class="cell" data-cell="5"></div>
-        <div class="cell" data-cell="6">O</div>
-        <div class="cell" data-cell="7">O</div>
-        <div class="cell" data-cell="8">O</div>
+        <div class="cell" data-cell="6"></div>
+        <div class="cell" data-cell="7"></div>
+        <div class="cell" data-cell="8"></div>
       </div>
       <div class="btns">
         <button class="btn reset">Reset</button>
