--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
         <div class="cell" data-cell="6"></div>
         <div class="cell" data-cell="7"></div>
         <div class="cell" data-cell="8"></div>
-        <div class="game-message">
-          <p>Game Over!!</p>
-          <p>Player has Won!</p>
+        <div class="game-blur hide"></div>
+        <div class="game-message hide">
+          <p class="game-over">Game Over!!</p>
+          <p class="player-won"></p>
         </div>
       </div>
       <div class="btns">
