--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
     <div class="container">
       <h1 class="title">Tic-Tac-Toe</h1>
       <div class="players">
-        <div class="player player-one">Player One</div>
-        <div class="player player-two">Player Two</div>
+        <div class="player player-one">
+          <div class="player-one-name">Player 1</div>
+          <div class="player-one-score">0</div>
+        </div>
+        <div class="player player-two">
+          <div class="player-two-name">Player 2</div>
+          <div class="player-two-score"></div>
+        </div>
       </div>
       <div class="game">
         <div class="cell" data-cell="0"></div>
