--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <div class="players">
         <div class="player player-one">
           <div class="player-one-name">Player 1</div>
-          <div class="player-one-score">0</div>
+          <div class="player-one-score score">0</div>
         </div>
         <div class="player player-two">
           <div class="player-two-name">Player 2</div>
-          <div class="player-two-score"></div>
+          <div class="player-two-score score">0</div>
         </div>
       </div>
       <div class="game">
