--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       <h1 class="title">Tic-Tac-Toe</h1>
       <div class="players">
         <div class="player player-one">
-          <div class="player-one-name">Player 1</div>
+          <div class="player-one-name" data-player-marker="X">Player 1</div>
           <div class="player-one-score score">0</div>
         </div>
         <div class="player player-two">
-          <div class="player-two-name">Player 2</div>
+          <div class="player-two-name" data-player-marker="O">Player 2</div>
           <div class="player-two-score score">0</div>
         </div>
       </div>
