Added two buttons, now youre able to pick against who you're playing against.

--- a/index.html
+++ b/index.html
@@ -22,24 +22,26 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div class="option-cards">
-      <h1 class="title main">Tic-Tac-Toe</h1>
+    <div class="contnr">
+      <div class="option-cards">
+        <h1 class="title main">Tic-Tac-Toe</h1>
 
-      <div class="play-options">
-        <div class="p-o player-v-player">
-          <h4>Player</h4>
-          <h4>vs.</h4>
-          <h4>Player</h4>
-        </div>
-        <div class="p-o player-v-cpu">
-          <h4>Player</h4>
-          <h4>Vs.</h4>
-          <h4>CPU</h4>
+        <div class="play-options">
+          <div class="p-o player-v-player">
+            <h4>Player</h4>
+            <h4>vs.</h4>
+            <h4>Player</h4>
+          </div>
+          <div class="p-o player-v-cpu">
+            <h4>Player</h4>
+            <h4>Vs.</h4>
+            <h4>CPU</h4>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="containe hide">
+    <div class="container hide">
       <h1 class="title">Tic-Tac-Toe</h1>
       <div class="players">
         <div class="player player-one">
