--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <div class="btns">
         <button class="btn reset">Reset</button>
-        <button class="btn start-over">Start Over</button>
+        <button class="btn start-over">Go Back</button>
       </div>
     </div>
   </body>
